--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DATABASE_URL="postgresql://koywe:koywe123@localhost:5432/koywe_db"
 EXCHANGE_API_URL = "URL"
 QUOTE_EXPIRED=5
 PORT=3000
+JWT_SECRET="SECRET"
