--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DATABASE_URL="postgresql://koywe:koywe123@localhost:5432/koywe_db"
-EXCHANGE_API_URL = "URL"
+EXCHANGE_API_URL = "https://api.exchange.cryptomkt.com/api/3/public"
 QUOTE_EXPIRED=5
 PORT=3000
 JWT_SECRET="SECRET"
